src/Pages/CartPage/CartPage.module.css
.CartPage {
  padding-top: 6rem;
  padding-bottom: 3rem;
}

.header {
  font-size: 2.5rem;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 6rem;
}

.btnAndPriceContainer {
  margin-top: 2rem;
  padding-top: 2rem;
  border-top: 2px solid #eee;
  width: 100%;
  display: grid;
  grid-row-gap: 2rem;
  align-items: left;
}

.summary{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.totalPrice {
  display: flex;
  align-items: flex-end;
  font-family: Raleway;
  font-size: 1.5rem;
  font-weight: 700;

  color: var(--c-out-stock);
}

.totalPrice p{
  font-family: Raleway;
  font-size: 1.5rem;
  font-weight: 500;
  color: var(--c-text);
}

.totalPrice .price {
  margin-left: 1rem;
  color: var(--c-text);
  font-size: 1.5rem;
  font-weight: 700;
}

.totalQuantity {
  display: flex;
  align-items: flex-end;
  font-family: Raleway;
  font-size: 1.5rem;
  font-weight: 700;

  color: var(--c-out-stock);
}

.noProducts {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.noProducts img {
  width: 25%;
  margin-bottom: 5rem;
}

.noProducts p {
  font-size: 2rem;
  font-weight: 700;
  color: #3f3d56;
  text-transform: capitalize;
}

.btnAndPriceContainer button {
  padding-top: 10rem;
  height: 100%;
  width: 17.5rem;
  border: none;
  background-color: var(--c-primary);
  color: var(--c-white);
  font-size: 1.2rem;
  font-weight: 500;
  border-radius: 2px;
  cursor: pointer;
  transition: all 0.3s ease;
}

.noProducts button {
  margin-top: 2.5rem;
  padding: 1rem 1.5rem;
  border: none;
  background-color: var(--c-primary);
  color: var(--c-white);
  font-size: 1.2rem;
  font-weight: 600;
  border-radius: 2px;
  cursor: pointer;
  transition: all 0.3s ease;
}

.btnAndPriceContainer button {
  margin-top: 0;
  padding: 1rem 3rem;
  text-transform: uppercase;
}

.noProducts button:hover,
.btnAndPriceContainer button:hover {
  opacity: 0.7;
}

